--- a/src/Css/Header.css
+++ b/src/Css/Header.css
@@ -49,10 +49,10 @@ header .logo h5 {
 .addStory-link {
   color: #0063a5 !important;
   border: #0063a5 solid 2px;
-  padding: 4px 10px !important;
+  padding: 4px 10px;
   margin-right: 2rem;
   border-radius: 4px;
-  margin-top: 7px;
+  /* margin-top: 7px; */
 }
 
 .register-link {
