--- a/src/Css/Header.css
+++ b/src/Css/Header.css
@@ -2,7 +2,7 @@
 
 header {
   width: 100%;
-  height: 85px;
+  height: 75px;
   position: relative;
 }
 
@@ -67,6 +67,7 @@ header .logo h5 {
   height: 100%;
   display: flex;
   align-items: center;
+  border-color: #0063a5;
 }
 
 @media only screen and (max-width: 1030px) {
@@ -86,7 +87,7 @@ header .logo h5 {
   outline: none;
   border: none;
   padding-left: 0.9rem;
-  background-color: rgba(105, 113, 116, 0.1);
+  background-color: rgba(74, 122, 140, 0.1);
 }
 
 .search-form button {
